# uRPC

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  COPYING  README  TODO  build-release.sh  cmake-palko-air.sh  cmake-palko-x61.sh
Excel/: Excel.sln
Excel/AddIn/: AddIn.csproj  Ribbon.Designer.cs  Ribbon.cs  ThisAddIn.Designer.cs  ThisAddIn.cs  UrpcControl.Designer.cs  UrpcControl.cs
Excel/AddIn/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Excel/Addin/: ThisAddIn.Designer.xml
Excel/RTD/: RTD.csproj  rtd.cs
Excel/RTD/Properties/: AssemblyInfo.cs
MATLAB/: info.xml
examples/clientcpp/: CMakeLists.txt  clientcpp.cpp  randexample.pb.h
examples/cpp/: CMakeLists.txt  cmdclient.cpp  matlabclient.cpp  matlabclient.hpp  matlabrequestdemo.m  randexample.pb.cc  randexample.pb.h  randserver.cpp  server.cpp
examples/cpp/randexample/: randexample.pb.cc  randexample.pb.h
examples/protobuf/: randexample.proto
examples/python/: client.py  randexample_pb2.py  server.py  uRPC_pb2.py
protobuf/: Decimal.proto  HTTP.proto-srcratch  Log.proto  uRPC.proto
python/urpc/: Decimal_pb2.py  Log_pb2.py  ServiceBroker.py  __init__.py  client.py  server.py  uRPC_pb2.py
src/: CMakeLists.txt  Decimal.pb.cc  Decimal.pb.h  Decimal_pb2.py  Log.pb.cc  Log.pb.h  Log_pb2.py  client.cpp  client.hpp  dns.cpp  dns.hpp  exception.hpp  factory.hpp  getdns.cpp  glob.cpp  glob.hpp  matlab.cpp  matlab.hpp  server.cpp  server.hpp  service.cpp  service.hpp  uRPC.pb.cc  uRPC.pb.h  uRPC_pb2.py
src/dns/: CMakeLists.txt  dns.cpp  dns.hpp  getdns-osx.cpp  getdns-win.cpp  getdns.cpp
src/kerberos/: CMakeLists.txt  kerberos-osx.cpp  kerberos-unix.cpp  kerberos-win.cpp  kerberos.cpp  kerberos.hpp
src/ldap/: CMakeLists.txt  ldap-unix.cpp  ldap-win.cpp  ldap.cpp  ldap.hpp
src/pb/: Decimal.pb.cc  Decimal.pb.h  Log.pb.cc  Log.pb.h  uRPC.pb.cc  uRPC.pb.h
src/win/: getdns.cpp
test/: CMakeLists.txt  readglob.cpp  testdns.cpp  writeglob.cpp
test/pb/: doubles.pb.cc  doubles.pb.h
test/protobuf/: doubles.proto
